WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184347
MacroAssemblerCodePtr::retagged() should not re-decorate the pointer on ARMv7.
https://bugs.webkit.org/show_bug.cgi?id=184347
Summary
MacroAssemblerCodePtr::retagged() should not re-decorate the pointer on ARMv7.
Mark Lam
Reported
2018-04-05 18:01:39 PDT
Patch coming. <
rdar://problem/39183165
>
Attachments
patch for landing.
(1.61 KB, patch)
2018-04-05 18:11 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
patch for landing.
(1.64 KB, patch)
2018-04-05 18:20 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2018-04-05 18:11:39 PDT
Created
attachment 337318
[details]
patch for landing. Michael already reviewed this in person.
Mark Lam
Comment 2
2018-04-05 18:20:46 PDT
Created
attachment 337322
[details]
patch for landing.
Mark Lam
Comment 3
2018-04-05 23:19:57 PDT
Landed in
r230327
: <
http://trac.webkit.org/r230327
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug