MacroAssemblerCodePtr::retagged() should not re-decorate the pointer on ARMv7. https://bugs.webkit.org/show_bug.cgi?id=184347 <rdar://problem/39183165>

Reviewed by Michael Saboff.

* assembler/MacroAssemblerCodeRef.h:
(JSC::MacroAssemblerCodePtr::MacroAssemblerCodePtr):
(JSC::MacroAssemblerCodePtr::retagged const):



Canonical link: https://commits.webkit.org/199909@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230327 268f45cc-cd09-0410-ab3c-d52691b4dbfc